--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,43 @@ body {
 	background-color: black;
 }
 
-.stage {
+.main {
 	background-color: white;
-	width: 100%;
-	height: 50em;
-	margin-top: 5em;
+	min-width: 1200px;
+	height: 500px;
+	margin-top: 110px;
+	padding-left: 100px;
+	position: relative;
+	z-index: 1;
+}
+
+.ryu {
+	float: left;
+	width: 659px;
+	height: 494px;
+}
+
+.ryu-ready, .ryu-still, .ryu-throwing {
+	width: 659px;
+	height: 494px;
+}
+
+.ryu-ready, .ryu-throwing {
+	display: none;
+}
+
+.ryu-ready {
+	background-image: url('../images/ryu-ready-position.gif');
+}
+
+.ryu-still {
+	background-image: url('../images/ryu-standing-position.png');
+}
+
+.ryu-throwing {
+	background-image: url('../images/ryu-throwing-position.png');
+}
+
+.hadouken {
+	float:left;
 }
