--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,12 @@ body {
 	height: 494px;
 }
 
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
 	width: 659px;
 	height: 494px;
 }
 
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing, .ryu-cool {
 	display: none;
 }
 
@@ -42,6 +42,10 @@ body {
 	background-image: url('../images/ryu-throwing-hadouken.png');
 }
 
+.ryu-cool {
+	background-image: url('../images/ryu-cool.gif');
+}
+
 .hadouken {
 	float:left;
 	background-image: url('../images/hadouken.gif');
@@ -54,6 +58,20 @@ body {
     left: 520px;
 }
 
-.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
 	background-repeat: no-repeat;
+}
+
+.instructions {
+	font-family: Bangers, sans-serif;
+	font-size: 1.8em;
+}
+
+.nice {
+	font-family:Bangers, sans-serif;
+	text-align: right;
+	margin-top: 4em;
+	margin-right: 5em;
+	font-size: 2.5em;
+	display:none;
 }
